Fix(Styles): Use url and fix animated-tools z-index

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,20 +1,23 @@
 /* SETTINGS */
-@import "settings/settings.global.css";
+@import url("settings/settings.global.css");
 
 /* GENERIC */
-@import "generic/generic.box-sizing.css";
-@import "generic/generic.normalize.css";
-@import "generic/generic.reset.css";
-@import "generic/generic.shared.css";
+@import url("generic/generic.box-sizing.css");
+@import url("generic/generic.normalize.css");
+@import url("generic/generic.reset.css");
+@import url("generic/generic.shared.css");
 
 /* ELEMENTS */
-@import "elements/elements.button.css";
-@import "elements/elements.headings.css";
-@import "elements/elements.image.css";
-@import "elements/elements.input.css";
-@import "elements/elements.label.css";
-@import "elements/elements.link.css";
-@import "elements/elements.page.css";
-@import "elements/elements.textarea.css";
-@import "elements/elements.video.css";
+@import url("elements/elements.button.css");
+@import url("elements/elements.headings.css");
+@import url("elements/elements.image.css");
+@import url("elements/elements.input.css");
+@import url("elements/elements.label.css");
+@import url("elements/elements.link.css");
+@import url("elements/elements.page.css");
+@import url("elements/elements.textarea.css");
+@import url("elements/elements.video.css");
 
+.animated-tools {
+  z-index: 1000!important;
+}
